samples/_failures_safe/1761143292_1d472c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3371ee6d.c: In function ‘kruskal_mst’:
./samples/SAFE/__tmp_3371ee6d.c:166:70: error: expected ‘)’ at end of input
  166 |     for (int i = 0; i < edge_count && mst_edges < g->num_nodes - 1; i
      |         ~                                                            ^
      |                                                                      )
./samples/SAFE/__tmp_3371ee6d.c:166:5: error: expected declaration or statement at end of input
  166 |     for (int i = 0; i < edge_count && mst_edges < g->num_nodes - 1; i
      |     ^~~
